--- a/CrackProblem/CrackProblem.csproj
+++ b/CrackProblem/CrackProblem.csproj
@@ -43,11 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Archive\InverseProblem.cs" />
+    <Compile Include="Archive\Program.cs" />
     <Compile Include="Contracts\ICore.cs" />
+    <Compile Include="Contracts\IInversProblemTestData.cs" />
     <Compile Include="Contracts\IParametrizedCurve.cs" />
     <Compile Include="Contracts\ISource.cs" />
-    <Compile Include="Contracts\ITestData.cs" />
-    <Compile Include="CrackProblemState.cs" />
+    <Compile Include="Contracts\IDirectProblemTestData.cs" />
+    <Compile Include="InverseCrackProblemState.cs" />
+    <Compile Include="DirectProblemState.cs" />
+    <Compile Include="InverseProblemSolver.cs" />
     <Compile Include="DirectProblemSolver.cs" />
     <Compile Include="Helpers\DeviationCalculator.cs" />
     <Compile Include="Helpers\ParametrizedCurve.cs" />
@@ -63,10 +68,11 @@
     <Compile Include="LinearSystem\SystemOfEquations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\CoordinatesDeviationDoubleTestData.cs" />
-    <Compile Include="Tests\FundamentalSolutionDevidedTastData.cs" />
-    <Compile Include="Tests\FundamentalSolutionTestData.cs" />
-    <Compile Include="Tests\PlanarTestData.cs" />
+    <Compile Include="Tests\DirectProblem\CoordinatesDeviationDoubleDirectProblemTestData.cs" />
+    <Compile Include="Tests\DirectProblem\FundamentalSolutionDevidedTastData.cs" />
+    <Compile Include="Tests\DirectProblem\FundamentalSolutionDirectProblemTestData.cs" />
+    <Compile Include="Tests\DirectProblem\PlanarDirectProblemTestData.cs" />
+    <Compile Include="Tests\InverseProblem\PlanarInverseProblemTastData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
